Lorems creados y bodycon margin 0

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi primer repositorio</title>
-</head>
-<body>
+  </head>
+  <body>
     Trabajando GIT
     <p>
-        Comando GITHUB
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, assumenda
+      laboriosam, quasi officiis illo, dolorum dolor incidunt maxime aperiam
+      omnis laudantium itaque eos temporibus ex cumque. Fuga possimus ipsum
+      laudantium?
     </p>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quod neque
+      commodi similique, pariatur iusto asperiores ducimus fugiat maiores dolore
+      amet dolorem suscipit necessitatibus, magni blanditiis, soluta incidunt
+      quos minima.
+    </p>
+  </body>
 </html>
